--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0032.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0032.html
@@ -115,7 +115,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 2143 231 2160 278">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -137,8 +137,7 @@
         </span>
         <span id="w_23" class="ocr_word" title="bbox 659 310 724 330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Hill.</ins>
-            <del title="nlp 0.90">Hill.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 761 314 774 342">
@@ -669,8 +668,7 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 476 705 542 739">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">SlJr</ins>
-            <del title="nlp 0.90">SlJr</del>
+            <ins title="nlp 2.00">33r</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 570 707 616 739">
@@ -855,22 +853,22 @@
       <span class="ocr_line" title="bbox 433 822 2161 867">
         <span id="w_159" class="ocr_word" title="bbox 433 823 460 857" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">f 334 El. p. 209,10 δεῖ εἰδέναι</ins>
+            <ins title="nlp 2.00">δεῖ εἰδέναι</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1087 822 1101 867">
           <span class="alternatives">
-            <ins title="nlp 2.00">|| 12 τὰ ἐναντ. </ins>
+            <ins title="nlp 2.00">τὰ ἐναντ. </ins>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1144 825 1184 857" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">|| alt. τὸ om. </ins>
+            <ins title="nlp 2.00">τὸ om. </ins>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1757 822 1808 856" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">|| 13. 14 εἰ δὲ μή, οὐκ</ins>
+            <ins title="nlp 2.00">εἰ δὲ μή, οὐκ</ins>
           </span>
         </span>
       </span>
@@ -902,8 +900,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 933 894 997 915">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1027 880 1042 926">
@@ -939,8 +936,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 1601 891 1667 914">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1697 879 1711 925">
@@ -958,9 +954,14 @@
             <ins title="nlp 2.00">||</ins>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 1950 879 2123 926" lang="grc">
+        <span id="w_179_0" class="ocr_word" title="bbox 1950 879 2123 926">
           <span class="alternatives">
-            <ins title="nlp 2.00">θεωρεῖται</ins>
+            <ins class="alt" title="nlp 2.00">θεωρεῖται</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 1950 879 2123 926">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -977,8 +978,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 579 950 645 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 674 939 689 985" lang="grc">
@@ -1022,21 +1022,19 @@
             <ins class="alt" title="nlp 1.00">21</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1418 940 1464 977" lang="grc">
+        <span id="w_191_0" class="ocr_word" title="bbox 1418 940 1464 977">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
+            <ins class="alt" title="nlp 2.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1492 951 1555 973">
+        <span id="w_191_1" class="ocr_word" title="bbox 1418 940 1464 977">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">urn.</ins>
-            <del title="nlp 0.90">urn.</del>
+            <ins class="alt" title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1632 940 1679 972">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">alt</ins>
-            <del title="nlp 0.90">alt</del>
+            <ins title="nlp 2.00">|| alt</ins>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 1716 938 1858 984" lang="grc">
@@ -1060,7 +1058,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 479 1009 545 1043" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">33ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 572 1009 620 1043">
@@ -1206,14 +1204,12 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1612 1080 1679 1102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1709 1067 1722 1100">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">li</ins>
-            <del title="nlp 0.90">li</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1753 1070 1772 1101">
@@ -1228,7 +1224,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1939 1070 1958 1102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
+            <ins title="nlp 2.00">9</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1985 1081 2006 1113" lang="grc">
@@ -1238,7 +1234,7 @@
         </span>
         <span id="w_231" class="ocr_word" title="bbox 2035 1068 2116 1104" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴασις</ins>
+            <ins title="nlp 2.00">ἴασις ||</ins>
           </span>
         </span>
       </span>
@@ -1337,9 +1333,9 @@
             <del title="nlp 0.90">om.</del>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 1935 1126 2161 1172" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 1935 1126 2161 1172">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ónomatou;hsanta</ins>
+            <ins class="alt" title="nlp 2.00">(ὀνοματοθήσαντα</ins>
           </span>
         </span>
       </span>
@@ -2375,8 +2371,7 @@
         </span>
         <span id="w_449" class="ocr_word" title="bbox 741 1890 754 1935">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’j</ins>
-            <del title="nlp 0.90">’j</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 792 1892 809 1923">
@@ -3359,8 +3354,7 @@
         </span>
         <span id="w_637" class="ocr_word" title="bbox 1171 2559 1235 2581">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_638" class="ocr_word" title="bbox 1266 2547 1279 2591" lang="grc">
@@ -3491,8 +3485,7 @@
         </span>
         <span id="w_662" class="ocr_word" title="bbox 491 2660 507 2705">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ji</ins>
-            <del title="nlp 0.90">ji</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_663" class="ocr_word" title="bbox 537 2662 579 2695">
@@ -3749,8 +3742,7 @@
         </span>
         <span id="w_710" class="ocr_word" title="bbox 1381 2861 1445 2884">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_711" class="ocr_word" title="bbox 1476 2852 1491 2896" lang="grc">
@@ -3798,8 +3790,7 @@
         </span>
         <span id="w_720" class="ocr_word" title="bbox 560 2917 561 2927">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_721" class="ocr_word" title="bbox 599 2906 638 2939">
@@ -3814,8 +3805,7 @@
         </span>
         <span id="w_723" class="ocr_word" title="bbox 843 2907 933 2949">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exjil.</ins>
-            <del title="nlp 0.90">exjil.</del>
+            <ins title="nlp 2.00">expl.</ins>
           </span>
         </span>
       </span>
