--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0224.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0224.html
@@ -1245,9 +1245,9 @@
             <ins class="alt" title="nlp 1.00">ὑποδεδέσθαι</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 2070 1517 2157 1552">
+        <span id="w_242_0" class="ocr_word" title="bbox 2070 1517 2157 1552">
           <span class="alternatives">
-            <ins title="nlp 2.00">256ν</ins>
+            <ins class="alt" title="nlp 2.00">256v</ins>
           </span>
         </span>
       </span>
@@ -2768,7 +2768,7 @@
         </span>
         <span id="w_529" class="ocr_word" title="bbox 1389 3158 1459 3197" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_530" class="ocr_word" title="bbox 1486 3160 1566 3201">
