--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0251.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0251.html
@@ -428,7 +428,7 @@
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1643 573 1704 626" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὸ</ins>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1744 589 1814 625" lang="grc">
@@ -1801,7 +1801,7 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 1240 2229 1328 2283" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
+            <ins title="nlp 2.00">(τῆς</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1358 2228 1429 2283" lang="grc">
