--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0225.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0225.html
@@ -735,14 +735,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1559 1212 1727 1269">
+        <span id="w_138_0" class="ocr_word" title="bbox 1559 1212 1727 1269">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πρῶτα&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;πρῶτα&amp;#003E;</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 1743 1213 1810 1253" lang="grc">
+        <span id="w_138_1" class="ocr_word" title="bbox 1559 1212 1727 1269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύο</ins>
+            <ins class="alt" title="nlp 2.00">δύο</ins>
           </span>
         </span>
       </span>
@@ -754,7 +754,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 340 1281 527 1338" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πρῶτον&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 555 1298 609 1326" lang="grc">
@@ -2485,20 +2485,19 @@
             <del title="nlp 0.90">adclidi</del>
           </span>
         </span>
-        <span id="w_475" class="ocr_word" title="bbox 1545 3018 1585 3050" lang="grc">
+        <span id="w_475_0" class="ocr_word" title="bbox 1545 3018 1585 3050">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι5</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
+          </span>
+        </span>
+        <span id="w_475_1" class="ocr_word" title="bbox 1545 3018 1585 3050">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_476" class="ocr_word" title="bbox 1613 3020 1716 3062" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῆς</ins>
-          </span>
-        </span>
-        <span id="w_477" class="ocr_word" title="bbox 1734 3018 1792 3051">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">KP</ins>
-            <del title="nlp 0.90">KP</del>
           </span>
         </span>
       </span>
