--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0176.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0176.html
@@ -1497,7 +1497,7 @@
       <span class="ocr_line" title="bbox 334 2025 2089 2083">
         <span id="w_288" class="ocr_word" title="bbox 334 2043 375 2074" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">25 τοὔνομα </ins>
+            <ins title="nlp 2.00">τοὔνομα </ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 641 2031 778 2082" lang="grc">
