--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0252.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0252.html
@@ -2042,8 +2042,7 @@
       <span class="ocr_line" title="bbox 335 2690 2082 2740">
         <span id="w_398" class="ocr_word" title="bbox 335 2691 349 2723">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">1</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 379 2700 594 2724" lang="grc">
