--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0226.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0226.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 374 102 1801 146">
         <span id="w_0" class="ocr_word" title="bbox 374 106 451 146">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">]Sfi</ins>
+            <ins title="nlp 2.00">186</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 761 103 897 136">
