--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0253.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0253.html
@@ -1109,9 +1109,14 @@
             <ins class="alt" title="nlp 1.00">ὄντα</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 502 1609 582 1665">
+        <span id="w_213_0" class="ocr_word" title="bbox 502 1609 582 1665">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 502 1609 582 1665">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 619 1626 700 1663" lang="grc">
@@ -1137,11 +1142,6 @@
         <span id="w_218" class="ocr_word" title="bbox 1511 1626 1596 1664" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἤιοι</ins>
-          </span>
-        </span>
-        <span id="w_219" class="ocr_word" title="bbox 1628 1626 1822 1665" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προτέρων</ins>
           </span>
         </span>
       </span>
@@ -1629,7 +1629,7 @@
       <span class="ocr_line" title="bbox 145 2229 1820 2287">
         <span id="w_316" class="ocr_word" title="bbox 245 2229 425 2287">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πλοῖον&amp;#x003C;,</ins>
+            <ins title="nlp 2.00">#x003C;,</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 445 2247 544 2286" lang="grc">
@@ -2135,7 +2135,7 @@
         </span>
         <span id="w_413" class="ocr_word" title="bbox 720 2808 808 2850" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀλλ῾</ins>
+            <ins title="nlp 2.00">ἀλλ῾</ins>
           </span>
         </span>
         <span id="w_414" class="ocr_word" title="bbox 834 2821 895 2854" lang="grc">
@@ -2160,7 +2160,7 @@
         </span>
         <span id="w_418" class="ocr_word" title="bbox 1314 2805 1523 2851" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ανθρωπος&amp;#x003C;·</ins>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_419" class="ocr_word" title="bbox 1550 2816 1588 2837" lang="grc">
