--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0228.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0228.html
@@ -1186,7 +1186,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 560 1566 604 1600">
           <span class="alternatives">
-            <ins title="nlp 2.00">Toῦ</ins>
+            <ins title="nlp 2.00">ῦ</ins>
           </span>
         </span>
         <span id="w_228" class="ocr_word" title="bbox 784 1569 831 1594" lang="grc">
@@ -2295,7 +2295,7 @@
         </span>
         <span id="w_443" class="ocr_word" title="bbox 2108 2767 2190 2802">
           <span class="alternatives">
-            <ins title="nlp 2.00">258ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
