--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0033.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0033.html
@@ -378,8 +378,7 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 297 529 311 575">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ij</ins>
-            <del title="nlp 0.90">ij</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 338 530 388 563">
@@ -482,7 +481,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 511 598 680 632" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">/aporon—proke;im.] </ins>
+            <ins title="nlp 2.00">—proke;im.] </ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 884 596 956 620" lang="grc">
@@ -510,9 +509,14 @@
             <ins class="alt" title="nlp 1.00">18</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1406 586 1472 622" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 1406 586 1472 622">
           <span class="alternatives">
-            <ins title="nlp 2.00">lég.—?oti] </ins>
+            <ins class="alt" title="nlp 2.00">λέγ.—ὅτι]</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 1406 586 1472 622">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1615 576 1704 614" lang="grc">
@@ -523,11 +527,6 @@
         <span id="w_97" class="ocr_word" title="bbox 1782 576 1820 609">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">19</ins>
-          </span>
-        </span>
-        <span id="w_98" class="ocr_word" title="bbox 1841 587 1938 608" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὗται</ins>
           </span>
         </span>
       </span>
@@ -556,8 +555,7 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 617 655 682 678">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 720 642 732 688" lang="grc">
@@ -613,8 +611,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1607 647 1672 669">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1702 632 1717 679">
@@ -678,8 +675,7 @@
         </span>
         <span id="w_126" class="ocr_word" title="bbox 753 713 857 735">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TTOtox.</ins>
-            <del title="nlp 0.90">TTOtox.</del>
+            <ins title="nlp 2.00">ποιότ.</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 877 700 952 734">
@@ -705,8 +701,7 @@
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1306 699 1386 729">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ante</ins>
-            <del title="nlp 0.90">ante</del>
+            <ins title="nlp 2.00">|| ante</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1414 707 1461 731" lang="grc">
@@ -827,8 +822,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 277 821 294 868">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 323 822 367 856">
@@ -1368,8 +1362,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1350 1222 1364 1269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">j]</ins>
-            <del title="nlp 0.90">j</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1387 1235 1454 1256" lang="grc">
@@ -1708,8 +1701,7 @@
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1480 1468 1545 1491">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">otD.</ins>
-            <del title="nlp 0.90">otD.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1574 1455 1591 1501">
@@ -1851,8 +1843,7 @@
         </span>
         <span id="w_346" class="ocr_word" title="bbox 924 1577 939 1623">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ij</ins>
-            <del title="nlp 0.90">Ij</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 961 1579 1004 1612">
@@ -2644,8 +2635,7 @@
         </span>
         <span id="w_496" class="ocr_word" title="bbox 1800 2042 1891 2085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exjtl.</ins>
-            <del title="nlp 0.90">exjtl.</del>
+            <ins title="nlp 2.00">expl.</ins>
           </span>
         </span>
       </span>
@@ -2855,13 +2845,12 @@
         </span>
         <span id="w_535" class="ocr_word" title="bbox 1209 2237 1250 2269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yr)</ins>
-            <del title="nlp 0.90">yr</del>
+            <ins title="nlp 2.00">γῆ</ins>
           </span>
         </span>
         <span id="w_536" class="ocr_word" title="bbox 1277 2236 1298 2269" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦέν</ins>
+            <ins title="nlp 2.00">ἢ ἐν</ins>
           </span>
         </span>
         <span id="w_537" class="ocr_word" title="bbox 1375 2235 1414 2268">
@@ -2986,7 +2975,7 @@
         </span>
         <span id="w_560" class="ocr_word" title="bbox 1196 2283 1231 2323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.)</ins>
+            <ins title="nlp 2.00">l.)</ins>
           </span>
         </span>
         <span id="w_561" class="ocr_word" title="bbox 1261 2280 1276 2326">
@@ -3357,14 +3346,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_628" class="ocr_word" title="bbox 548 2589 617 2631">
+        <span id="w_628_0" class="ocr_word" title="bbox 548 2589 617 2631">
           <span class="alternatives">
-            <ins title="nlp 2.00">73r—</ins>
+            <ins class="alt" title="nlp 2.00">73r—146r</ins>
           </span>
         </span>
-        <span id="w_630" class="ocr_word" title="bbox 690 2591 787 2631">
+        <span id="w_628_1" class="ocr_word" title="bbox 548 2589 617 2631">
           <span class="alternatives">
-            <ins title="nlp 2.00">146r</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_631" class="ocr_word" title="bbox 828 2594 870 2631">
@@ -3378,9 +3367,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_633" class="ocr_word" title="bbox 968 2589 1135 2630">
+        <span id="w_633_0" class="ocr_word" title="bbox 968 2589 1135 2630">
           <span class="alternatives">
-            <ins title="nlp 2.00">278v—412r.</ins>
+            <ins class="alt" title="nlp 2.00">278v—412r.</ins>
+          </span>
+        </span>
+        <span id="w_633_1" class="ocr_word" title="bbox 968 2589 1135 2630">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_635" class="ocr_word" title="bbox 1317 2587 1424 2627">
@@ -3393,18 +3387,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eadem</ins>
             <del title="nlp 0.90">eadem</del>
-          </span>
-        </span>
-        <span id="w_637" class="ocr_word" title="bbox 1640 2596 1767 2624">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">manu</ins>
-            <del title="nlp 0.90">manu</del>
-          </span>
-        </span>
-        <span id="w_638" class="ocr_word" title="bbox 1799 2580 1957 2634">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripta</ins>
-            <del title="nlp 0.90">scripta</del>
           </span>
         </span>
       </span>
@@ -3532,17 +3514,11 @@
         </span>
         <span id="w_659" class="ocr_word" title="bbox 1888 2729 1958 2769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ge-</ins>
+            <ins title="nlp 2.00">gemello</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 150 2789 1957 2849">
-        <span id="w_660" class="ocr_word" title="bbox 150 2797 272 2837">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mello</ins>
-            <del title="nlp 0.90">gemello</del>
-          </span>
-        </span>
         <span id="w_661" class="ocr_word" title="bbox 311 2796 481 2837">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">videtur</ins>
@@ -3786,8 +3762,7 @@
         </span>
         <span id="w_700" class="ocr_word" title="bbox 491 3071 553 3111">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’’</ins>
-            <del title="nlp 0.90">’’</del>
+            <ins title="nlp 2.00">Mb</ins>
           </span>
         </span>
         <span id="w_701" class="ocr_word" title="bbox 581 3070 784 3123">
@@ -3911,7 +3886,7 @@
         </span>
         <span id="w_723" class="ocr_word" title="bbox 369 3197 389 3230" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">8 αὐτοῦ</ins>
+            <ins title="nlp 2.00">αὐτοῦ</ins>
           </span>
         </span>
         <span id="w_724" class="ocr_word" title="bbox 608 3197 674 3241" lang="grc">
@@ -3937,7 +3912,7 @@
         </span>
         <span id="w_728" class="ocr_word" title="bbox 904 3197 944 3230" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_729" class="ocr_word" title="bbox 1035 3196 1145 3241" lang="grc">
