--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0254.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0254.html
@@ -367,9 +367,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 409 557 2095 614">
-        <span id="w_71" class="ocr_word" title="bbox 573 560 617 614" lang="grc">
+        <span id="w_71_0" class="ocr_word" title="bbox 573 560 617 614">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἡ</ins>
+            <ins class="alt" title="nlp 2.00">(ἡ</ins>
+          </span>
+        </span>
+        <span id="w_71_1" class="ocr_word" title="bbox 573 560 617 614">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 650 576 720 614" lang="grc">
@@ -410,11 +415,6 @@
         <span id="w_79" class="ocr_word" title="bbox 1746 557 1846 600" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔστιν</ins>
-          </span>
-        </span>
-        <span id="w_80" class="ocr_word" title="bbox 1879 573 2095 614" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιστητός,</ins>
           </span>
         </span>
       </span>
@@ -568,9 +568,14 @@
             <ins class="alt" title="nlp 2.00">῾οὐδέπω</ins>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 1214 766 1363 822" lang="grc">
+        <span id="w_111_0" class="ocr_word" title="bbox 1214 766 1363 822">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈ἐστίν〉’</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐστίν&amp;#x003Ε;’</ins>
+          </span>
+        </span>
+        <span id="w_111_1" class="ocr_word" title="bbox 1214 766 1363 822">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1393 766 1540 821" lang="grc">
@@ -591,11 +596,6 @@
         <span id="w_114_1" class="ocr_word" title="bbox 1668 765 1881 807">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">῾οὔπω</ins>
-          </span>
-        </span>
-        <span id="w_115" class="ocr_word" title="bbox 1904 767 2094 822" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εὕρηται᾿.</ins>
           </span>
         </span>
       </span>
@@ -1071,7 +1071,7 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1929 1323 1990 1376" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 2027 1339 2097 1377" lang="grc">
@@ -1138,7 +1138,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1958 1393 2098 1445" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖται</ins>
+            <ins title="nlp 2.00">(δεῖται</ins>
           </span>
         </span>
       </span>
@@ -1351,7 +1351,7 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1329 1669 1425 1723" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1448 1686 1520 1724" lang="grc">
@@ -2026,8 +2026,7 @@
         </span>
         <span id="w_392" class="ocr_word" title="bbox 2021 2366 2096 2403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xaiv</ins>
-            <del title="nlp 0.90">xaiv</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -2288,7 +2287,7 @@
         </span>
         <span id="w_442" class="ocr_word" title="bbox 1586 2677 1660 2722" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γὰρ</ins>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
         <span id="w_443" class="ocr_word" title="bbox 1686 2678 1721 2711">
@@ -2348,9 +2347,14 @@
             <ins title="nlp 2.00">φ.</ins>
           </span>
         </span>
-        <span id="w_453" class="ocr_word" title="bbox 750 2734 882 2772">
+        <span id="w_453_0" class="ocr_word" title="bbox 750 2734 882 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;αὐτοῦ&amp;#x003C;?</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;αὐτοῦ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_453_1" class="ocr_word" title="bbox 750 2734 882 2772">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_455" class="ocr_word" title="bbox 1058 2737 1138 2766">
@@ -2396,11 +2400,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Laur.</ins>
             <del title="nlp 0.90">Laur.</del>
-          </span>
-        </span>
-        <span id="w_464" class="ocr_word" title="bbox 1995 2733 2073 2776">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">72,5</ins>
           </span>
         </span>
       </span>
