--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0229.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0229.html
@@ -176,7 +176,7 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1360 291 1666 344" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ὁμολογούμενον</ins>
+            <ins title="nlp 2.00">ὁμολογούμενον</ins>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1702 303 1794 341" lang="grc">
@@ -466,7 +466,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1093 632 1430 688" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;καταμετρεῖται&amp;#x003Ε;’·</ins>
+            <ins title="nlp 2.00">Ε;’·</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1489 651 1512 688" lang="grc">
@@ -1406,7 +1406,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1437 1685 1472 1709" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ο&amp;#x772;ι&amp;#x772;</ins>
+            <ins title="nlp 2.00">#x772;</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1492 1684 1502 1693">
@@ -2171,17 +2171,11 @@
         </span>
         <span id="w_407" class="ocr_word" title="bbox 1734 2587 1872 2630">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">supple-</ins>
+            <ins title="nlp 2.00">suppleneris</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 60 2642 1825 2692">
-        <span id="w_408" class="ocr_word" title="bbox 60 2642 144 2674">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">veris</ins>
-            <del title="nlp 0.90">suppleveris</del>
-          </span>
-        </span>
         <span id="w_409" class="ocr_word" title="bbox 168 2654 247 2687" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">πρὸς</ins>
@@ -2625,8 +2619,7 @@
         </span>
         <span id="w_493" class="ocr_word" title="bbox 197 2994 260 3025">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">K-:</ins>
-            <del title="nlp 0.90">K-:</del>
+            <ins title="nlp 2.00">K2:</ins>
           </span>
         </span>
         <span id="w_494" class="ocr_word" title="bbox 299 2995 451 3027">
@@ -2657,9 +2650,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_499" class="ocr_word" title="bbox 910 3008 942 3029" lang="grc">
+        <span id="w_499_0" class="ocr_word" title="bbox 910 3008 942 3029">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;ι&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">α&amp;#x772;ι&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_499_1" class="ocr_word" title="bbox 910 3008 942 3029">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_500" class="ocr_word" title="bbox 1071 3009 1100 3030">
@@ -2667,9 +2665,14 @@
             <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_501" class="ocr_word" title="bbox 1133 2995 1323 3041">
+        <span id="w_501_0" class="ocr_word" title="bbox 1133 2995 1323 3041">
           <span class="alternatives">
-            <ins title="nlp 2.00">ο&amp;#x772;ι&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ο&amp;#x772;ι&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_501_1" class="ocr_word" title="bbox 1133 2995 1323 3041">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_502_0" class="ocr_word" title="bbox 1355 2996 1388 3029">
@@ -2685,16 +2688,6 @@
         <span id="w_503_0" class="ocr_word" title="bbox 1533 3005 1778 3039">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τέλει</ins>
-          </span>
-        </span>
-        <span id="w_503_1" class="ocr_word" title="bbox 1533 3005 1778 3039">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">εὑρισκομένων</ins>
-          </span>
-        </span>
-        <span id="w_504" class="ocr_word" title="bbox 1811 2994 1872 3039">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πρὸ</ins>
           </span>
         </span>
       </span>
