--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0255.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0255.html
@@ -1199,9 +1199,14 @@
             <ins class="alt" title="nlp 1.00">τι</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 510 1565 738 1621" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 510 1565 738 1621">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈λέγεται,</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;λέγεται,</ins>
+          </span>
+        </span>
+        <span id="w_231_1" class="ocr_word" title="bbox 510 1565 738 1621">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 778 1563 993 1616" lang="grc">
@@ -1209,9 +1214,14 @@
             <ins title="nlp 2.00">χαθάπερ</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1032 1559 1204 1615" lang="grc">
+        <span id="w_233_0" class="ocr_word" title="bbox 1032 1559 1204 1615">
           <span class="alternatives">
-            <ins title="nlp 2.00">δοχεῖ&amp;#x003C;,</ins>
+            <ins class="alt" title="nlp 2.00">δοκεῖ&amp;#x003Ε;,</ins>
+          </span>
+        </span>
+        <span id="w_233_1" class="ocr_word" title="bbox 1032 1559 1204 1615">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1244 1559 1269 1613" lang="grc">
@@ -1222,16 +1232,6 @@
         <span id="w_235" class="ocr_word" title="bbox 1301 1559 1436 1598" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
-          </span>
-        </span>
-        <span id="w_236" class="ocr_word" title="bbox 1470 1570 1550 1609" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_237" class="ocr_word" title="bbox 1582 1567 1831 1607" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνδέχεται</ins>
           </span>
         </span>
       </span>
@@ -1573,9 +1573,14 @@
             <ins class="alt" title="nlp 1.00">δέ</ins>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 238 2087 322 2142" lang="grc">
+        <span id="w_303_0" class="ocr_word" title="bbox 238 2087 322 2142">
           <span class="alternatives">
-            <ins title="nlp 2.00">(χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_303_1" class="ocr_word" title="bbox 238 2087 322 2142">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_304" class="ocr_word" title="bbox 354 2102 466 2127" lang="grc">
@@ -1616,11 +1621,6 @@
         <span id="w_311" class="ocr_word" title="bbox 1429 2088 1742 2128" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">όνοματοποιιας,</ins>
-          </span>
-        </span>
-        <span id="w_312" class="ocr_word" title="bbox 1790 2087 1833 2111" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
       </span>
@@ -1826,9 +1826,14 @@
             <ins class="alt" title="nlp 1.00">Πλάτωνος</ins>
           </span>
         </span>
-        <span id="w_353" class="ocr_word" title="bbox 675 2359 775 2415">
+        <span id="w_353_0" class="ocr_word" title="bbox 675 2359 775 2415">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;νῦν&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;νῦν</ins>
+          </span>
+        </span>
+        <span id="w_353_1" class="ocr_word" title="bbox 675 2359 775 2415">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 807 2357 1099 2413" lang="grc">
@@ -1854,11 +1859,6 @@
         <span id="w_358" class="ocr_word" title="bbox 1588 2351 1674 2404" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γάρ,</ins>
-          </span>
-        </span>
-        <span id="w_359" class="ocr_word" title="bbox 1706 2361 1834 2403" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φησίν,</ins>
           </span>
         </span>
       </span>
