--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0230.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0230.html
@@ -198,7 +198,7 @@
         </span>
         <span id="w_35" class="ocr_word" title="bbox 830 338 964 392" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάλιν</ins>
+            <ins title="nlp 2.00">(πάλιν</ins>
           </span>
         </span>
         <span id="w_36" class="ocr_word" title="bbox 997 353 1068 392" lang="grc">
@@ -1970,7 +1970,7 @@
         </span>
         <span id="w_377" class="ocr_word" title="bbox 1274 2414 1379 2470">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1402 2431 1513 2455" lang="grc">
