--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0180.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0180.html
@@ -2575,7 +2575,7 @@
         </span>
         <span id="w_500" class="ocr_word" title="bbox 2058 2971 2097 3004" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">14 ὅτι</ins>
+            <ins title="nlp 2.00">ὅτι</ins>
           </span>
         </span>
       </span>
