--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0231.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0231.html
@@ -698,7 +698,7 @@
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1783 942 1870 977" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">259ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -2510,7 +2510,7 @@
         </span>
         <span id="w_478" class="ocr_word" title="bbox 247 3104 357 3137">
           <span class="alternatives">
-            <ins title="nlp 2.00">456Α</ins>
+            <ins title="nlp 2.00">Α</ins>
           </span>
         </span>
         <span id="w_479" class="ocr_word" title="bbox 550 3106 594 3139">
