--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0256.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0256.html
@@ -72,9 +72,14 @@
             <ins class="alt" title="nlp 1.00">λόγου·</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 566 205 646 260" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 566 205 646 260">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈διὰ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;διὰ</ins>
+          </span>
+        </span>
+        <span id="w_11_1" class="ocr_word" title="bbox 566 205 646 260">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 679 204 801 258" lang="grc">
@@ -102,24 +107,19 @@
             <ins class="alt" title="nlp 1.00">Πλατωνικὴν</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 1532 199 1730 255" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 1532 199 1730 255">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκβάλλει〉</ins>
+            <ins class="alt" title="nlp 2.00">ἐκβάλλει&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_17_1" class="ocr_word" title="bbox 1532 199 1730 255">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1769 201 1832 241" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_19" class="ocr_word" title="bbox 1869 202 1972 254" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγει</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 2003 216 2071 255" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -1796,9 +1796,14 @@
             <ins class="alt" title="nlp 1.00">ἄτοπον,</ins>
           </span>
         </span>
-        <span id="w_349" class="ocr_word" title="bbox 876 2073 954 2129">
+        <span id="w_349_0" class="ocr_word" title="bbox 876 2073 954 2129">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_349_1" class="ocr_word" title="bbox 876 2073 954 2129">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 977 2089 1044 2127" lang="grc">
@@ -1829,11 +1834,6 @@
         <span id="w_355" class="ocr_word" title="bbox 1860 2070 1902 2111" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_356" class="ocr_word" title="bbox 1925 2074 2090 2124" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρῶτον,</ins>
           </span>
         </span>
       </span>
@@ -2560,7 +2560,7 @@
         </span>
         <span id="w_491" class="ocr_word" title="bbox 477 3005 632 3050" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱρεῖται</ins>
+            <ins title="nlp 2.00">(αἱρεῖται</ins>
           </span>
         </span>
         <span id="w_492" class="ocr_word" title="bbox 649 3017 687 3038" lang="grc">
