--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0231.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0231.html
@@ -696,9 +696,9 @@
             <ins class="alt" title="nlp 1.00">ζητεῖ,</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1783 942 1870 977" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 1783 942 1870 977">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν</ins>
+            <ins class="alt" title="nlp 2.00">259v</ins>
           </span>
         </span>
       </span>
