--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0182.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0182.html
@@ -2602,9 +2602,14 @@
             <ins class="alt" title="nlp 1.00">δῆλον</ins>
           </span>
         </span>
-        <span id="w_508" class="ocr_word" title="bbox 1150 3107 1238 3148">
+        <span id="w_508_0" class="ocr_word" title="bbox 1150 3107 1238 3148">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οὖν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὖν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_508_1" class="ocr_word" title="bbox 1150 3107 1238 3148">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_509" class="ocr_word" title="bbox 1252 3104 1266 3138">
@@ -2637,11 +2642,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">post</ins>
             <del title="nlp 0.90">post</del>
-          </span>
-        </span>
-        <span id="w_515" class="ocr_word" title="bbox 2053 3117 2171 3140">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κοινωνίας</ins>
           </span>
         </span>
       </span>
